[project]
name = "ray-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "diffusers[torch]>=0.35.1",
  "numpy>=2.3.3",
  "pandas>=2.3.2",
  "pip>=25.2",
  "pyarrow>=17.0.0",
  "ray[default,serve,tune]==2.46.0",
  "s3fs>=2025.9.0",
  "scikit-learn>=1.7.2",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "xgboost>=3.0.5",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = ["ipython>=9.5.0", "notebook>=7.4.5"]
